Fixed form alignment

--- a/client/apps/root/root.less
+++ b/client/apps/root/root.less
@@ -1021,7 +1021,8 @@ form .ant-cascader-picker:only-child, form .ant-select:only-child {
   .ant-form-item-control {
     line-height: 32px;
   }
-  .ant-select:only-child {
+  .ant-select:only-child,
+  .ant-input-group-wrapper {
     top: 0;
   }
   .ant-form-item {
