--- a/client/components/FormPane/index.less
+++ b/client/components/FormPane/index.less
@@ -3,7 +3,8 @@
   .ant-form-item-control {
     line-height: 32px;
   }
-  form .ant-select:only-child {
+  form .ant-select:only-child,
+  form .ant-input-group-wrapper {
     top: 0;
   }
   .ant-card-body {
